...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/today_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        tools:text="@string/today_case"
        android:textAlignment="center"
...
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_confirmed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/data_value"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="20sp"
...
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_recovery"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/data_value"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="20sp"
...
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_death"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/data_value"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="20sp"
...
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/total_case"
                        android:textAlignment="center"
                        android:textColor="@color/dark_green"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toTopOf="@+id/tv_total_case"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_total_case"
...
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/recovery"
                        android:textAlignment="center"
                        android:textColor="@color/dark_green"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toTopOf="@+id/tv_total_recovery"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_total_recovery"
...
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/death"
                        android:textAlignment="center"
                        android:textColor="@color/dark_green"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toTopOf="@+id/tv_total_death"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_total_death"
...
