<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_covid_stat"
        android:icon="@drawable/ic_masks"
        android:title="@string/covid_19" />

    <item
        android:id="@+id/navigation_record"
        android:icon="@drawable/ic_mic_green_24"
        android:title="@string/title_record" />

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/ic_history_green_24"
        android:title="@string/title_history" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_account_circle"
        android:title="@string/profile" />

</menu>